syntax = "proto2";

package ext;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/syncthing/syncthing/proto/ext";

extend google.protobuf.MessageOptions {
    optional bool xml_tags = 74001;
}

extend google.protobuf.FieldOptions {
    optional string xml       = 75005;
    optional string json      = 75006;
    optional string default   = 75007;
    optional bool   restart   = 75008;
    optional bool   device_id = 75009;
    optional string goname    = 75010;
    optional string gotype    = 75011;
    optional bool   nodefault = 75012;
}

extend google.protobuf.EnumValueOptions {
    optional string enumgoname = 76010;
}
